# CUDATests

./: .gitignore
Prac1/: CMakeLists.txt
Prac1/src/: prac1a.cu  prac1b.cu  prac1c.cu
Prac2/: CMakeLists.txt
Prac2/src/: prac2.cu  prac2b.cu
Prac3/: CMakeLists.txt
Prac3/src/: laplace3d.cu
Prac4/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: matmul.cu
utils/: CMakeLists.txt
utils/src/: kernel_occupancy.cu  matmul.cu
